@navikt/core/css/src/data-table.css
/* ... */
/* BORDER STYLING END */

.aksel-data-table__column-header {
  /* TODO: Might want this to be dynamic */
  --__axc-data-table-density: var(--ax-space-8);

  position: relative;
  font-weight: var(--ax-font-weight-bold);

  &:has(.aksel-data-table__th-sort-button):hover {
    background-color: var(--ax-bg-neutral-moderate-hover);
  }

  &:has(.aksel-data-table__th-sort-button):active {
    background-color: var(--ax-bg-neutral-moderate-pressed);
  }

  &[data-sortable="true"] {
    padding: 0;
    block-size: calc(var(--__axc-data-table-density) + 1.5rem);
  }
}

.aksel-data-table__th-sort-button {
  display: flex;
  align-items: center;
  gap: var(--ax-space-2);
  block-size: calc(var(--__axc-data-table-density) + 1.5rem);
  width: 100%;
  cursor: pointer;
  text-align: start;
  background-color: transparent;
  border: none;
  font-weight: inherit;

  &:focus-visible {
    outline: none;
  }
}

.aksel-data-table__th-sort-icon {
  flex-shrink: 0;
  margin-left: auto;

  &[data-sort-direction="none"] {
    visibility: hidden;
  }

  .aksel-data-table__th-sort-button:is(:hover, :focus-visible, :focus-within) & {
    visibility: visible;
  }

  .aksel-data-table[data-layout="fixed"] &[data-sort-direction="none"] {
    display: none;
  }

  .aksel-data-table[data-layout="fixed"] .aksel-data-table__th-sort-button:is(:hover, :focus-visible, :focus-within) & {
    display: block;
  }
}

.aksel-data-table__th-content {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.aksel-data-table__th-resize-handle {
  z-index: 2;
  position: absolute;
  cursor: col-resize;
  margin: 0;
  padding: 0;
  border: none;
  background: transparent;
  display: flex;
  justify-content: center;
  inset-block: 0;
  inset-inline-end: -10px;
  width: 19px; /* TODO: Violation of WCAG SC 2.5.8 Target Size? https://www.w3.org/WAI/WCAG22/Understanding/target-size-minimum.html */

  &:focus-visible {
    outline: 2px solid var(--ax-border-focus);
    outline-offset: -4px;
    border-radius: var(--ax-radius-8);
  }

  &::after {
    content: "";
    position: absolute;
    inset-block: 0;
    width: 3px;
    height: 75%;
    top: 50%;
    transform: translateY(-50%);
    border-radius: var(--ax-radius-full);
    transition: background 50ms linear;
  }

  &:hover::after {
    /* TODO: Consider if the resize-handle should be visible already when hovering the column header */
    background: var(--ax-bg-strong);
  }

  &:active::after,
  &:focus-visible::after {
    background: var(--ax-bg-strong-pressed);
  }

  .aksel-data-table__th:last-of-type & {
    inset-inline-end: 0;
    width: 15px;

    &::after {
      inset-inline-end: 0;
    }
  }

  &[data-active="true"] {
    .aksel-data-table__th-resize-handle-indicator {
      position: absolute;
      top: 50%;
      color: var(--ax-bg-strong);
      transform: translateY(-50%);
      height: 1.5rem;

      &.aksel-data-table__th-resize-handle-indicator--start {
        right: 12px;
      }

      &.aksel-data-table__th-resize-handle-indicator--end {
        left: 12px;
      }
    }

    &::after {
      background: var(--ax-bg-strong);
    }

    &:focus-visible,
    &:focus,
    &:active {
      outline: none;
    }
  }
}

.aksel-data-table__th-action-button {
  transition: 0.1s ease-in-out;

  /* TODO: Animating all these sort of "stutters" a little now. Can some be removed? */
  transition-property: opacity, width, min-width, max-width, padding;

  &:focus-visible {
    transition: none;
  }

  &:not(.aksel-data-table__th:is(:hover, :focus-within) &, &:focus-visible, &[data-expanded="true"]),
  .aksel-data-table__th:has(.aksel-data-table__th-resize-handle:hover:not(:focus)) & {
    opacity: 0;
    min-width: 0;
    max-width: 0;
    padding: 0;
    overflow: hidden;
  }
}

.aksel-data-table__th {
  scroll-margin-block: var(--ax-space-0);
  scroll-margin-inline: var(--ax-space-0);

  &:focus-visible,
  /* Focus instead of focus-visible so that effect of sort-icon staying isnt strange */
  &:has(.aksel-data-table__th-sort-button:focus) {
    outline: 2px solid var(--ax-border-focus);
    outline-offset: -4px;
  }

  &[data-selectable="true"] {
    padding: 0;

    & > div {
      display: grid;
      place-content: center;
    }
  }
}

.aksel-data-table__tfoot {
  background-color: var(--ax-bg-raised);
}

.aksel-data-table__filler-cell {
  width: auto;
  display: table-cell;
  padding: 0;
}

.aksel-data-drag-and-drop__drag-handler__button {
  height: 1.5rem;
  position: relative;
  background: transparent;
  border: none;
  padding: 0;

  &:hover {
    cursor: grab;
  }

  &:focus-visible,
  &[data-drag-handler-active="true"] {
    outline: 2px solid var(--ax-border-focus);
    outline-offset: -1px;
    border-radius: var(--ax-radius-8);
  }
}

.aksel-data-table__drag-and-drop-item {
  background-color: var(--ax-bg-default);

  &[data-overlay="true"] {
    width: 100%;
    opacity: 0.8;
    box-shadow: var(--ax-shadow-dialog);
  }

  /* TODO - might be removable */
  &[data-keyboard-dragging="true"] {
    .aksel-data-drag-and-drop__drag-handler__button {
      outline: 2px solid var(--ax-border-focus);
      outline-offset: -1px;
      border-radius: var(--ax-radius-8);
    }
  }

  &[data-drop-target="true"]:not([data-overlay="true"]) {
    background: var(--ax-bg-neutral-moderate);
  }
}

.aksel-data-drag-and-drop__drag-handler__alt,
.aksel-data-drag-and-drop__drag-handler {
  position: relative;
  height: 1.5rem;

  .aksel-data-drag-and-drop__drag-handler__arrow {
    height: 1.8rem;
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    background: var(--ax-bg-default);
    border: none;
    cursor: pointer;
    padding: 0;
    border-radius: 50%;
    z-index: 1;

    &[data-direction="up"] {
      top: -18px;
    }

    &[data-direction="down"] {
      bottom: calc(-100% - 22px);
    }

    &:disabled {
      opacity: 0.8;
      cursor: not-allowed;
    }
  }
}
/* ... */

